[gd_scene load_steps=6 format=3 uid="uid://bohux4cu85cx2"]

[ext_resource type="Script" path="res://MapView/Scenes/map_view.gd" id="1_we7iw"]
[ext_resource type="Texture2D" uid="uid://dvtrx0saxknk7" path="res://MapView/Assets/CCity_mockup.png" id="1_wj8rf"]
[ext_resource type="Script" path="res://MapView/Scenes/BuildingWindow.gd" id="3_v72fi"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6gjyy"]
texture = ExtResource("1_wj8rf")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
4:3/0 = 0
5:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
2:2/size_in_atlas = Vector2i(2, 2)
2:2/0 = 0
6:3/size_in_atlas = Vector2i(2, 1)
6:3/0 = 0
8:2/size_in_atlas = Vector2i(1, 2)
8:2/0 = 0
9:2/size_in_atlas = Vector2i(2, 2)
9:2/0 = 0
11:2/size_in_atlas = Vector2i(2, 2)
11:2/0 = 0
13:2/size_in_atlas = Vector2i(2, 2)
13:2/0 = 0
15:2/size_in_atlas = Vector2i(2, 1)
15:2/0 = 0
15:3/size_in_atlas = Vector2i(2, 1)
15:3/0 = 0

[sub_resource type="TileSet" id="TileSet_hr1yq"]
tile_size = Vector2i(32, 32)
custom_data_layer_0/name = ""
custom_data_layer_0/type = 0
sources/0 = SubResource("TileSetAtlasSource_6gjyy")

[node name="MapView" type="Node2D"]
script = ExtResource("1_we7iw")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_hr1yq")
format = 2
layer_0/tile_data = PackedInt32Array(0, 1179648, 4, 65536, 393216, 1, 131072, 393216, 1, 196608, 393216, 1, 262144, 393216, 1, 327680, 393216, 1, 393216, 393216, 1, 458752, 393216, 1, 524288, 393216, 1, 589824, 393216, 1, 655360, 393216, 1, 720896, 393216, 1, 786432, 393216, 1, 851968, 393216, 1, 917504, 393216, 1, 983040, 393216, 1, 1048576, 393216, 1, 1114112, 393216, 1, 1179648, 393216, 1, 1245184, 393216, 1, 1, 1179648, 4, 65537, 393216, 1, 131073, 393216, 1, 196609, 393216, 1, 262145, 393216, 1, 327681, 393216, 1, 393217, 393216, 1, 458753, 393216, 1, 524289, 393216, 1, 589825, 393216, 1, 655361, 393216, 1, 720897, 393216, 1, 786433, 393216, 1, 851969, 393216, 1, 917505, 393216, 1, 983041, 393216, 1, 1048577, 393216, 1, 1114113, 393216, 1, 1179649, 393216, 1, 1245185, 393216, 1, 2, 1179648, 4, 65538, 1179648, 4, 131074, 393216, 1, 196610, 393216, 1, 262146, 393216, 1, 327682, 393216, 1, 393218, 393216, 1, 458754, 393216, 1, 524290, 393216, 1, 589826, 393216, 1, 655362, 1179648, 4, 720898, 1179648, 4, 786434, 393216, 1, 851970, 393216, 1, 917506, 393216, 1, 983042, 393216, 1, 1048578, 393216, 1, 1114114, 393216, 1, 1179650, 393216, 1, 1245186, 393216, 1, 3, 1179648, 4, 65539, 1179648, 4, 131075, 393216, 1, 196611, 393216, 1, 262147, 393216, 1, 327683, 393216, 1, 393219, 393216, 1, 458755, 393216, 1, 524291, 786432, 5, 589827, 786432, 5, 655363, 393216, 1, 720899, 393216, 1, 786435, 393216, 1, 851971, 393216, 1, 917507, 393216, 1, 983043, 393216, 1, 1048579, 393216, 1, 1114115, 393216, 1, 1179651, 393216, 1, 1245187, 393216, 1, 4, 1179648, 4, 65540, 1179648, 4, 131076, 1179648, 4, 196612, 1179648, 4, 262148, 1179648, 4, 327684, 393216, 1, 393220, 786432, 5, 458756, 393216, 1, 524292, 393216, 1, 589828, 393216, 1, 655364, 786432, 5, 720900, 393216, 1, 786436, 393216, 1, 851972, 393216, 1, 917508, 393216, 1, 983044, 393216, 1, 1048580, 786432, 5, 1114116, 786432, 5, 1179652, 393216, 1, 1245188, 393216, 1, 5, 1179648, 4, 65541, 1179648, 4, 131077, 1179648, 4, 196613, 1179648, 4, 262149, 1179648, 4, 327685, 393216, 1, 393221, 393216, 1, 458757, 393216, 1, 524293, 393216, 1, 589829, 393216, 1, 655365, 393216, 1, 720901, 393216, 1, 786437, 393216, 1, 851973, 393216, 1, 917509, 1179648, 4, 983045, 393216, 1, 1048581, 393216, 1, 1114117, 393216, 1, 1179653, 393216, 1, 1245189, 393216, 1, 6, 1179648, 4, 65542, 1179648, 4, 131078, 1179648, 4, 196614, 1179648, 4, 262150, 1179648, 4, 327686, 393216, 1, 393222, 393216, 1, 458758, 393216, 1, 524294, 393216, 1, 589830, 1179648, 4, 655366, 393216, 1, 720902, 393216, 1, 786438, 393216, 1, 851974, 786432, 5, 917510, 393216, 1, 983046, 393216, 1, 1048582, 393216, 1, 1114118, 786432, 5, 1179654, 393216, 1, 1245190, 393216, 1, 7, 1179648, 4, 65543, 1179648, 4, 131079, 1179648, 4, 196615, 1179648, 4, 262151, 1179648, 4, 327687, 393216, 1, 393223, 393216, 1, 458759, 393216, 1, 524295, 393216, 1, 589831, 393216, 1, 655367, 393216, 1, 720903, 393216, 1, 786439, 786432, 5, 851975, 393216, 1, 917511, 393216, 1, 983047, 393216, 1, 1048583, 393216, 1, 1114119, 393216, 1, 1179655, 393216, 1, 1245191, 393216, 1, 8, 1179648, 4, 65544, 1179648, 4, 131080, 1179648, 4, 196616, 1179648, 4, 262152, 1179648, 4, 327688, 1179648, 4, 393224, 393216, 1, 458760, 393216, 1, 524296, 393216, 1, 589832, 393216, 1, 655368, 393216, 1, 720904, 1179648, 4, 786440, 393216, 1, 851976, 1179648, 4, 917512, 393216, 1, 983048, 393216, 1, 1048584, 393216, 1, 1114120, 1179648, 4, 1179656, 393216, 1, 1245192, 393216, 1, 9, 1179648, 4, 65545, 1179648, 4, 131081, 1179648, 4, 196617, 1179648, 4, 262153, 1179648, 4, 327689, 1179648, 4, 393225, 393216, 1, 458761, 393216, 1, 524297, 393216, 1, 589833, 393216, 1, 655369, 1179648, 4, 720905, 393216, 1, 786441, 393216, 1, 851977, 393216, 1, 917513, 1179648, 4, 983049, 393216, 1, 1048585, 393216, 1, 1114121, 1179648, 4, 1179657, 393216, 1, 1245193, 393216, 1, 10, 393216, 1, 65546, 1179648, 4, 131082, 1179648, 4, 196618, 1179648, 4, 262154, 1179648, 4, 327690, 1179648, 4, 393226, 393216, 1, 458762, 393216, 1, 524298, 393216, 1, 589834, 393216, 1, 655370, 786432, 5, 720906, 786432, 5, 786442, 1179648, 4, 851978, 393216, 1, 917514, 393216, 1, 983050, 393216, 1, 1048586, 393216, 1, 1114122, 393216, 1, 1179658, 393216, 1, 1245194, 393216, 1, 11, 393216, 1, 65547, 393216, 1, 131083, 393216, 1, 196619, 1179648, 4, 262155, 1179648, 4, 327691, 1179648, 4, 393227, 1179648, 4, 458763, 393216, 1, 524299, 393216, 1, 589835, 393216, 1, 655371, 393216, 1, 720907, 393216, 1, 786443, 393216, 1, 851979, 393216, 1, 917515, 393216, 1, 983051, 393216, 1, 1048587, 393216, 1, 1114123, 393216, 1, 1179659, 393216, 1, 1245195, 393216, 1, 12, 393216, 1, 65548, 393216, 1, 131084, 393216, 1, 196620, 393216, 1, 262156, 1179648, 4, 327692, 1179648, 4, 393228, 1179648, 4, 458764, 393216, 1, 524300, 393216, 1, 589836, 393216, 1, 655372, 786432, 5, 720908, 393216, 1, 786444, 393216, 1, 851980, 786432, 5, 917516, 786432, 5, 983052, 393216, 1, 1048588, 393216, 1, 1114124, 786432, 5, 1179660, 393216, 1, 1245196, 393216, 1, 13, 393216, 1, 65549, 393216, 1, 131085, 393216, 1, 196621, 393216, 1, 262157, 393216, 1, 327693, 1179648, 4, 393229, 1179648, 4, 458765, 1179648, 4, 524301, 393216, 1, 589837, 393216, 1, 655373, 393216, 1, 720909, 393216, 1, 786445, 393216, 1, 851981, 393216, 1, 917517, 393216, 1, 983053, 786432, 5, 1048589, 393216, 1, 1114125, 393216, 1, 1179661, 393216, 1, 1245197, 393216, 1, 14, 393216, 1, 65550, 393216, 1, 131086, 393216, 1, 196622, 393216, 1, 262158, 393216, 1, 327694, 393216, 1, 393230, 1179648, 4, 458766, 1179648, 4, 524302, 1179648, 4, 589838, 393216, 1, 655374, 393216, 1, 720910, 393216, 1, 786446, 393216, 1, 851982, 393216, 1, 917518, 393216, 1, 983054, 786432, 5, 1048590, 1179648, 4, 1114126, 393216, 1, 1179662, 393216, 1, 1245198, 393216, 1, 15, 393216, 1, 65551, 393216, 1, 131087, 393216, 1, 196623, 393216, 1, 262159, 393216, 1, 327695, 393216, 1, 393231, 1179648, 4, 458767, 1179648, 4, 524303, 1179648, 4, 589839, 1179648, 4, 655375, 393216, 1, 720911, 393216, 1, 786447, 393216, 1, 851983, 393216, 1, 917519, 1179648, 4, 983055, 393216, 1, 1048591, 1179648, 4, 1114127, 393216, 1, 1179663, 393216, 1, 1245199, 393216, 1, 16, 393216, 1, 65552, 393216, 1, 131088, 393216, 1, 196624, 393216, 1, 262160, 786432, 5, 327696, 393216, 1, 393232, 393216, 1, 458768, 1179648, 4, 524304, 393216, 1, 589840, 1179648, 4, 655376, 393216, 1, 720912, 393216, 1, 786448, 393216, 1, 851984, 393216, 1, 917520, 393216, 1, 983056, 393216, 1, 1048592, 1179648, 4, 1114128, 393216, 1, 1179664, 393216, 1, 1245200, 393216, 1, 17, 393216, 1, 65553, 393216, 1, 131089, 393216, 1, 196625, 786432, 5, 262161, 393216, 1, 327697, 393216, 1, 393233, 393216, 1, 458769, 393216, 1, 524305, 1179648, 4, 589841, 1179648, 4, 655377, 1179648, 4, 720913, 393216, 1, 786449, 393216, 1, 851985, 786432, 5, 917521, 393216, 1, 983057, 393216, 1, 1048593, 393216, 1, 1114129, 393216, 1, 1179665, 393216, 1, 1245201, 393216, 1, 18, 393216, 1, 65554, 393216, 1, 131090, 393216, 1, 196626, 786432, 5, 262162, 393216, 1, 327698, 393216, 1, 393234, 393216, 1, 458770, 393216, 1, 524306, 393216, 1, 589842, 1179648, 4, 655378, 1179648, 4, 720914, 1179648, 4, 786450, 393216, 1, 851986, 393216, 1, 917522, 786432, 5, 983058, 393216, 1, 1048594, 393216, 1, 1114130, 393216, 1, 1179666, 393216, 1, 1245202, 393216, 1, 19, 393216, 1, 65555, 393216, 1, 131091, 393216, 1, 196627, 786432, 5, 262163, 393216, 1, 327699, 393216, 1, 393235, 393216, 1, 458771, 393216, 1, 524307, 393216, 1, 589843, 1179648, 4, 655379, 1179648, 4, 720915, 1179648, 4, 786451, 393216, 1, 851987, 393216, 1, 917523, 393216, 1, 983059, 393216, 1, 1048595, 393216, 1, 1114131, 393216, 1, 1179667, 786432, 5, 1245203, 393216, 1, 20, 393216, 1, 65556, 393216, 1, 131092, 393216, 1, 196628, 393216, 1, 262164, 393216, 1, 327700, 393216, 1, 393236, 393216, 1, 458772, 393216, 1, 524308, 393216, 1, 589844, 393216, 1, 655380, 1179648, 4, 720916, 1179648, 4, 786452, 1179648, 4, 851988, 393216, 1, 917524, 393216, 1, 983060, 786432, 5, 1048596, 393216, 1, 1114132, 393216, 1, 1179668, 393216, 1, 1245204, 393216, 1, 21, 393216, 1, 65557, 131072, 5, 131093, 393216, 1, 196629, 131072, 5, 262165, 131072, 5, 327701, 393216, 1, 393237, 393216, 1, 458773, 393216, 1, 524309, 393216, 1, 589845, 393216, 1, 655381, 393216, 1, 720917, 1179648, 4, 786453, 1179648, 4, 851989, 393216, 1, 917525, 393216, 1, 983061, 393216, 1, 1048597, 393216, 1, 1114133, 393216, 1, 1179669, 393216, 1, 1245205, 393216, 1, 22, 393216, 1, 65558, 393216, 1, 131094, 393216, 1, 196630, 393216, 1, 262166, 393216, 1, 327702, 393216, 1, 393238, 393216, 1, 458774, 393216, 1, 524310, 393216, 1, 589846, 393216, 1, 655382, 393216, 1, 720918, 1179648, 4, 786454, 1179648, 4, 851990, 1179648, 4, 917526, 393216, 1, 983062, 393216, 1, 1048598, 393216, 1, 1114134, 393216, 1, 1179670, 393216, 1, 1245206, 393216, 1, 23, 393216, 1, 65559, 393216, 1, 131095, 393216, 1, 196631, 393216, 1, 262167, 393216, 1, 327703, 393216, 1, 393239, 131072, 5, 458775, 393216, 1, 524311, 393216, 1, 589847, 393216, 1, 655383, 393216, 1, 720919, 1179648, 4, 786455, 1179648, 4, 851991, 1179648, 4, 917527, 393216, 1, 983063, 393216, 1, 1048599, 393216, 1, 1114135, 393216, 1, 1179671, 393216, 1, 1245207, 393216, 1, 24, 393216, 1, 65560, 393216, 1, 131096, 393216, 1, 196632, 393216, 1, 262168, 393216, 1, 327704, 786432, 5, 393240, 655360, 1, 458776, 655360, 1, 524312, 393216, 1, 589848, 393216, 1, 655384, 393216, 1, 720920, 1179648, 4, 786456, 1179648, 4, 851992, 1179648, 4, 917528, 393216, 1, 983064, 393216, 1, 1048600, 393216, 1, 1114136, 393216, 1, 1179672, 786432, 5, 1245208, 393216, 1, 25, 393216, 1, 65561, 393216, 1, 131097, 393216, 1, 196633, 393216, 1, 262169, 786432, 5, 327705, 655360, 1, 393241, 131072, 5, 458777, 393216, 1, 524313, 393216, 1, 589849, 393216, 1, 655385, 393216, 1, 720921, 393216, 1, 786457, 1179648, 4, 851993, 1179648, 4, 917529, 1179648, 4, 983065, 393216, 1, 1048601, 393216, 1, 1114137, 393216, 1, 1179673, 393216, 1, 1245209, 393216, 1, 26, 393216, 1, 65562, 393216, 1, 131098, 393216, 1, 196634, 393216, 1, 262170, 786432, 5, 327706, 393216, 1, 393242, 131072, 5, 458778, 393216, 1, 524314, 393216, 1, 589850, 393216, 1, 655386, 393216, 1, 720922, 393216, 1, 786458, 393216, 1, 851994, 1179648, 4, 917530, 1179648, 4, 983066, 393216, 1, 1048602, 393216, 1, 1114138, 393216, 1, 1179674, 393216, 1, 1245210, 393216, 1, 27, 393216, 1, 65563, 393216, 1, 131099, 393216, 1, 196635, 786432, 5, 262171, 393216, 1, 327707, 655360, 1, 393243, 655360, 1, 458779, 655360, 1, 524315, 655360, 1, 589851, 393216, 1, 655387, 393216, 1, 720923, 393216, 1, 786459, 393216, 1, 851995, 1179648, 4, 917531, 1179648, 4, 983067, 393216, 1, 1048603, 393216, 1, 1114139, 393216, 1, 1179675, 393216, 1, 1245211, 393216, 1, 28, 393216, 1, 65564, 393216, 1, 131100, 655360, 1, 196636, 786432, 5, 262172, 393216, 1, 327708, 393216, 1, 393244, 393216, 1, 458780, 131072, 5, 524316, 655360, 1, 589852, 393216, 1, 655388, 393216, 1, 720924, 393216, 1, 786460, 393216, 1, 851996, 1179648, 4, 917532, 1179648, 4, 983068, 1179648, 4, 1048604, 393216, 1, 1114140, 393216, 1, 1179676, 393216, 1, 1245212, 393216, 1, 29, 393216, 1, 65565, 393216, 1, 131101, 786432, 5, 196637, 786432, 5, 262173, 393216, 1, 327709, 393216, 1, 393245, 393216, 1, 458781, 131072, 5, 524317, 655360, 1, 589853, 393216, 1, 655389, 393216, 1, 720925, 393216, 1, 786461, 393216, 1, 851997, 1179648, 4, 917533, 1179648, 4, 983069, 1179648, 4, 1048605, 393216, 1, 1114141, 393216, 1, 1179677, 393216, 1, 1245213, 393216, 1, 30, 393216, 1, 65566, 393216, 1, 131102, 786432, 5, 196638, 393216, 1, 262174, 393216, 1, 327710, 393216, 1, 393246, 393216, 1, 458782, 393216, 1, 524318, 655360, 1, 589854, 786432, 5, 655390, 393216, 1, 720926, 393216, 1, 786462, 393216, 1, 851998, 393216, 1, 917534, 1179648, 4, 983070, 1179648, 4, 1048606, 393216, 1, 1114142, 393216, 1, 1179678, 393216, 1, 1245214, 393216, 1, 31, 393216, 1, 65567, 786432, 5, 131103, 393216, 1, 196639, 393216, 1, 262175, 393216, 1, 327711, 393216, 1, 393247, 393216, 1, 458783, 393216, 1, 524319, 655360, 1, 589855, 393216, 1, 655391, 786432, 5, 720927, 393216, 1, 786463, 393216, 1, 851999, 393216, 1, 917535, 1179648, 4, 983071, 1179648, 4, 1048607, 1179648, 4, 1114143, 393216, 1, 1179679, 393216, 1, 1245215, 393216, 1, 32, 786432, 5, 65568, 393216, 1, 131104, 393216, 1, 196640, 393216, 1, 262176, 393216, 1, 327712, 393216, 1, 393248, 393216, 1, 458784, 393216, 1, 524320, 655360, 1, 589856, 393216, 1, 655392, 393216, 1, 720928, 393216, 1, 786464, 393216, 1, 852000, 393216, 1, 917536, 393216, 1, 983072, 1179648, 4, 1048608, 1179648, 4, 1114144, 393216, 1, 1179680, 393216, 1, 1245216, 393216, 1, 33, 393216, 1, 65569, 393216, 1, 131105, 393216, 1, 196641, 393216, 1, 262177, 393216, 1, 327713, 393216, 1, 393249, 131072, 5, 458785, 655360, 1, 524321, 393216, 1, 589857, 393216, 1, 655393, 393216, 1, 720929, 393216, 1, 786465, 393216, 1, 852001, 393216, 1, 917537, 393216, 1, 983073, 1179648, 4, 1048609, 1179648, 4, 1114145, 393216, 1, 1179681, 393216, 1, 1245217, 393216, 1, 34, 393216, 1, 65570, 393216, 1, 131106, 393216, 1, 196642, 393216, 1, 262178, 131072, 5, 327714, 131072, 5, 393250, 393216, 1, 458786, 655360, 1, 524322, 393216, 1, 589858, 393216, 1, 655394, 393216, 1, 720930, 393216, 1, 786466, 393216, 1, 852002, 393216, 1, 917538, 393216, 1, 983074, 393216, 1, 1048610, 1179648, 4, 1114146, 1179648, 4, 1179682, 393216, 1, 1245218, 393216, 1, 35, 393216, 1, 65571, 393216, 1, 131107, 393216, 1, 196643, 393216, 1, 262179, 393216, 1, 327715, 655360, 1, 393251, 655360, 1, 458787, 393216, 1, 524323, 393216, 1, 589859, 393216, 1, 655395, 393216, 1, 720931, 393216, 1, 786467, 393216, 1, 852003, 393216, 1, 917539, 393216, 1, 983075, 393216, 1, 1048611, 1179648, 4, 1114147, 1179648, 4, 1179683, 1179648, 4, 1245219, 393216, 1, 36, 393216, 1, 65572, 786432, 5, 131108, 393216, 1, 196644, 393216, 1, 262180, 393216, 1, 327716, 393216, 1, 393252, 393216, 1, 458788, 393216, 1, 524324, 393216, 1, 589860, 393216, 1, 655396, 393216, 1, 720932, 393216, 1, 786468, 393216, 1, 852004, 393216, 1, 917540, 393216, 1, 983076, 393216, 1, 1048612, 1179648, 4, 1114148, 393216, 1, 1179684, 1179648, 4, 1245220, 393216, 1, 37, 393216, 1, 65573, 393216, 1, 131109, 786432, 5, 196645, 393216, 1, 262181, 393216, 1, 327717, 393216, 1, 393253, 393216, 1, 458789, 393216, 1, 524325, 393216, 1, 589861, 393216, 1, 655397, 786432, 5, 720933, 393216, 1, 786469, 393216, 1, 852005, 393216, 1, 917541, 786432, 5, 983077, 393216, 1, 1048613, 393216, 1, 1114149, 1179648, 4, 1179685, 1179648, 4, 1245221, 1179648, 4, 38, 393216, 1, 65574, 393216, 1, 131110, 393216, 1, 196646, 393216, 1, 262182, 393216, 1, 327718, 393216, 1, 393254, 786432, 5, 458790, 393216, 1, 524326, 393216, 1, 589862, 393216, 1, 655398, 393216, 1, 720934, 393216, 1, 786470, 393216, 1, 852006, 393216, 1, 917542, 393216, 1, 983078, 393216, 1, 1048614, 393216, 1, 1114150, 393216, 1, 1179686, 1179648, 4, 1245222, 1179648, 4, 39, 393216, 1, 65575, 393216, 1, 131111, 393216, 1, 196647, 393216, 1, 262183, 393216, 1, 327719, 393216, 1, 393255, 393216, 1, 458791, 393216, 1, 524327, 393216, 1, 589863, 393216, 1, 655399, 393216, 1, 720935, 393216, 1, 786471, 393216, 1, 852007, 393216, 1, 917543, 393216, 1, 983079, 393216, 1, 1048615, 393216, 1, 1114151, 393216, 1, 1179687, 393216, 1, 1245223, 1179648, 4)

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 640.0
offset_right = 1280.0
offset_bottom = 768.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
color = Color(0.0545217, 0.233283, 0.250093, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 0
offset_right = 103.0
offset_bottom = 81.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 15
columns = 2

[node name="Label" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Revenue:"

[node name="RevenueLabel" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "0"

[node name="Population" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Population:"

[node name="PopulationLabel" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "0"

[node name="Happy" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Happiness:"

[node name="ProgressBar" type="ProgressBar" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
value = 50.0

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
text = "Current Tick:"

[node name="TickValue" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
text = "0"

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer2"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="ColorRect/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="SettingsButton" type="Button" parent="ColorRect/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="BuildingWindow" type="Window" parent="."]
title = "Module"
initial_position = 1
size = Vector2i(320, 320)
visible = false
script = ExtResource("3_v72fi")

[node name="TabContainer" type="TabContainer" parent="BuildingWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Road" type="VBoxContainer" parent="BuildingWindow/TabContainer"]
layout_mode = 2

[node name="EastWestRoadButton" type="Button" parent="BuildingWindow/TabContainer/Road"]
layout_mode = 2
text = "East - West"

[node name="ParkingLotButton" type="Button" parent="BuildingWindow/TabContainer/Road"]
layout_mode = 2
text = "Parking Lot"

[node name="NorthSouthRoadButton" type="Button" parent="BuildingWindow/TabContainer/Road"]
layout_mode = 2
text = "North - South"

[node name="Building" type="VBoxContainer" parent="BuildingWindow/TabContainer"]
visible = false
layout_mode = 2

[node name="StoreButton" type="Button" parent="BuildingWindow/TabContainer/Building"]
layout_mode = 2
text = "Store"

[node name="GodotDDSWrapper" type="GodotDDSWrapper" parent="."]

[connection signal="pressed" from="ColorRect/MarginContainer2/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="close_requested" from="BuildingWindow" to="BuildingWindow" method="_on_close_requested"]
[connection signal="pressed" from="BuildingWindow/TabContainer/Road/EastWestRoadButton" to="BuildingWindow" method="_on_east_west_road_button_pressed"]
[connection signal="pressed" from="BuildingWindow/TabContainer/Road/ParkingLotButton" to="BuildingWindow" method="_on_parking_lot_button_pressed"]
[connection signal="pressed" from="BuildingWindow/TabContainer/Road/NorthSouthRoadButton" to="BuildingWindow" method="_on_north_south_road_button_pressed"]
[connection signal="pressed" from="BuildingWindow/TabContainer/Building/StoreButton" to="BuildingWindow" method="_on_store_button_pressed"]
